--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -27,8 +27,8 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/garments">Full Inventory</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="{% url 'garments_index' %}">On the Rack</a></li>
+        <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
   </header>
