--- a/main_app/templates/garments/index.html
+++ b/main_app/templates/garments/index.html
@@ -14,16 +14,18 @@
 <section class="card-container">
   {% for garment in garments %}
     <div class="card">
-      <div class="card-content">
-        <div class="card-img-container">
-          <img 
-            src="{% static NEEDS DEFAULT IMAGE %}" 
-            alt=""
-          >
+      <a href='{% url "garments_detail" garment.id %}'>
+        <div class="card-content">
+          <div class="card-img-container">
+            <img 
+              src="{% static NEEDS DEFAULT IMAGE %}" 
+              alt=""
+            >
+          </div>
+          <h2 class="card-title">{{ garment.type }}</h2>
+            <p><small>{{ garment.availbility }}</small></p>
         </div>
-        <h2 class="card-title">{{ garment.type }}</h2>
-        <p><small>{{ garment.availbility }}</small></p>
-      </div>
+      </a>
     </div>
   {% endfor %}
 </section>
