add garment function

--- a/main_app/templates/garments/detail.html
+++ b/main_app/templates/garments/detail.html
@@ -13,10 +13,7 @@
 
 <section class="cat-container">
   <div class="cat-img">
-    <img 
-      src="{% static 'images/generic_dressform.jpeg' %}" 
-      alt="A generic mannequin image"
-    >
+    <img src="{% static 'images/empty_dressform.jpeg' %}" alt="A generic manaquin">
   </div>
   <div class="cat-details">
     <h1>{{ garment.type }}</h1>
