--- a/main_app/templates/garments/detail.html
+++ b/main_app/templates/garments/detail.html
@@ -25,6 +25,10 @@
     <h5>{{ garment.care }}</h5>
     <h5>{{ garment.notes }}</h5>
   </div>
+  <div class="cat-actions">
+      <a href="{% url 'garments_update' garment.id %}" class="btn warn">Edit</a>
+      <a href="{% url 'garments_delete' garment.id %}" class="btn danger">Delete</a>
+    </div>
 </section>
 
 {% endblock %}
