--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -28,7 +28,7 @@
     <nav>
       <ul>
         <li><a href="{% url 'garments_index' %}">On the Rack</a></li>
-        <li><a href="{% url 'garments_create' %}">Add a garment</a></li>
+        <li><a href="{% url 'garments_create' %}">Add a Garment</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
