--- a/main_app/templates/main_app/garment_form.html
+++ b/main_app/templates/main_app/garment_form.html
@@ -8,7 +8,11 @@
 {% block content %}
 
 <div class="page-header">
-  <h1>Add a Garment</h1>
+  {% if object %}
+    <h1>Edit {{object.name}}</h1>
+  {% else %}
+    <h1>Add a Garment</h1>
+  {% endif %}
   <img src="{% static 'images/clipboard_form.jpeg' %}" alt="A clipboard with a blank form"/>
 </div>
 <form action="" method="post" class="form-container">
