--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -27,9 +27,17 @@
     </div>
     <nav>
       <ul>
-        <li><a href="{% url 'garments_index' %}">On the Rack</a></li>
-        <li><a href="{% url 'garments_create' %}">Add a Garment</a></li>
-        <li><a href="{% url 'about' %}">About</a></li>
+        {% if user.is_authenticated %}
+          <li><a href="{% url 'garments_index' %}">On the Rack</a></li>
+          <li><a href="{% url 'garments_create' %}">Add a Garment</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'logout' %}">Log out</a></li>
+        {% else %}
+          <li><a href="{% url 'garments_index' %}">On the Rack</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'home' %}">Login</a></li>
+          <li><a href="{% url 'signup' %}">Sign Up</a></li>
+        {% endif %}
       </ul>
     </nav>
   </header>
