--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -23,11 +23,11 @@ body {
   flex-direction: column;
   align-items: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'VTKS EMBROIDERY'
     sans-serif;
   min-height: 100vh;
-  --nav-bg: rgba(104, 197, 248, .7);
-  --nav-bg-ff: rgba(104, 197, 248, .9);
+  --nav-bg: rgba(57, 75, 84, 0.7);
+  --nav-bg-ff: rgba(57, 75, 84, 0.7);
   --borders: rgb(36, 116, 248) solid 2px;
   --text-color: rgb(17, 20, 17);
   --link-hover-color: rgb(16, 56, 158);
@@ -45,6 +45,8 @@ body {
   --font-reg: 1.6rem;
   --card-border-radius: 6px;
 }
+
+
 
 header {
   width: 100%;
@@ -92,6 +94,7 @@ nav li {
   margin: auto;
   padding: 10px 20px 0;
   max-width: 500px;
+  font-family: VTKS EMBROIDERY;
 }
 
 .page-header {
@@ -233,6 +236,8 @@ nav li {
     background: var(--nav-bg-ff);
     border: var(--borders);
     border-radius: 18px;
+    font-size: 10px;
+    padding-left: 40px;
   }
 
   nav {
@@ -241,7 +246,7 @@ nav li {
 
   .header-logo-container {
     /* visual fix to help align logo */
-    padding-top: 6px;
+    padding-bottom: 10px;
     width: 256px;
     height: 35px;
   }
