--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -4,8 +4,8 @@
 
 <h1>About Southard Theatrical</h1>
 <hr />
-<p>
-  Welcome to Southard Theatrical, a boutique costume rental option
-</p>
+<h2>
+  Welcome to Southard Theatrical, a boutique costume rental experience
+</h2>
 
 {% endblock %}
