--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -2,20 +2,14 @@
 {% load static %}
 
 {% block head %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}"/>
+  <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
 {% endblock %}
 
 {% block content %}
 
-<section class="logo-container">
-  <div class="cat-container">
-    <img src="{% static 'images/splash.svg' %}" alt="The Cat Collector Cat" />
-  </div>
-  <img 
-    src="{% static 'images/logotype.svg' %}" 
-    alt="Text reads: Cat Collector"
-  />
-</section>
+<img src="{% static 'images/costume_storage3.png' %}" alt="costumes hanging in storage">
+<hr />
+<h1 id="logo">SOUTHARD <br>THEATRICAL</h1>
 {% if not user.is_authenticated %}
   <section>
     <form action="{% url 'home' %}" method="post" class="login">
