--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -15,7 +15,7 @@ html {
      in most browser configurations this will be 10px */
 :root {
     font-size: 62.5%
-}
+} 
 
 body {
   margin: 0;
@@ -23,12 +23,12 @@ body {
   flex-direction: column;
   align-items: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'VTKS EMBROIDERY'
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'VTKS EMBROIDERY', 'Needlework Perfect', 'Needlework Good'
     sans-serif;
   min-height: 100vh;
-  --nav-bg: rgba(57, 75, 84, 0.7);
-  --nav-bg-ff: rgba(57, 75, 84, 0.7);
-  --borders: rgb(36, 116, 248) solid 2px;
+  --nav-bg: rgba(250, 228, 190, 0.7);
+  --nav-bg-ff: rgba(250, 228, 190, 0.7);
+  --borders: rgb(248, 192, 36) solid 2px;
   --text-color: rgb(17, 20, 17);
   --link-hover-color: rgb(16, 56, 158);
   --button-bg: rgb(245, 245, 245);
@@ -94,7 +94,7 @@ nav li {
   margin: auto;
   padding: 10px 20px 0;
   max-width: 500px;
-  font-family: VTKS EMBROIDERY;
+  font-family: Needlework Good;
 }
 
 .page-header {
@@ -242,6 +242,14 @@ nav li {
 
   nav {
     margin-left: auto;
+  }
+
+  #welcome_img{
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
   }
 
   .header-logo-container {
