--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -16,7 +16,7 @@ main > section {
 }
 
 #logo{
-  font-family: VTKS EMBROIDERY;
+  font-family: Needlework Good;
   font-size: 40px;
 }
 
@@ -26,7 +26,7 @@ main > section {
 
 .logo-container {
   max-width: 375px;
-  font-family: VTKS EMBROIDERY;
+  font-family: Needlework Good;
   font-size: 40px;
 }
 
