--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -7,10 +7,9 @@
 
 {% block content %}
 
-<img src="{% static 'images/costume_storage3.png' %}" alt="costumes hanging in storage">
+<img id="welcome_img" src="{% static 'images/costume_storage3.png' %}" alt="costumes hanging in storage">
 <hr />
-<hr />
-<h1 id="logo">SOUTHARD <br>THEATRICAL</h1>
+<h1 id="logo">Southard <br>Theatrical</h1>
 {% if not user.is_authenticated %}
   <section>
     <form action="{% url 'home' %}" method="post" class="login">
