--- a/main_app/templates/garments/index.html
+++ b/main_app/templates/garments/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/garment-index.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'css/garment_index.css' %}"/>
 {% endblock %}
 
 {% block content %}
