--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -4,8 +4,9 @@
 
 <h1>About Southard Theatrical</h1>
 <hr />
-<h2>
-  Welcome to Southard Theatrical, a boutique costume rental experience
-</h2>
+
+<header> Our Work </header>
+
+
 
 {% endblock %}
