--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -40,9 +40,14 @@
       </ul>
     </nav>
   </header>
+  <div class="background">
   <main>
     {% block content %}
     {% endblock %}
   </main>
 </body>
+<footer id="footer">
+  <h3>Southard Theatrical | Twitter: @southard_costumes | IG: @southard.costumes | southard@costumes.sam </h3>
+</footer>
+</div>
 </html>
