--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -70,6 +70,10 @@ main > section {
   margin-top: 16px;
 }
 
+.home_img{
+  height: 200px;
+}
+
 @media only screen and (min-width: 768px) {
   main {
     justify-content: space-around;
