--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -9,7 +9,7 @@
 
 <img id="welcome_img" src="{% static 'images/costume_storage3.png' %}" alt="costumes hanging in storage">
 <hr />
-<h1 id="logo">Southard <br>Theatrical</h1>
+<h1 id="logo">Southard <br>Theatrical</h1><h2>a boutique costume build and rental experience</h2>
 {% if not user.is_authenticated %}
   <section>
     <form action="{% url 'home' %}" method="post" class="login">
@@ -22,5 +22,13 @@
   </section>
 {% endif %}
 
+<section id="home_imgs">
+  <img height="300px" src="{% static 'images/20s.jpg' %}" alt="woman in a 1920's style costume">
+  <h2>Attention to detail</h2>
+  <img height="300px" src="{% static 'images/full_dress.jpg' %}" alt="costumes hanging in storage">
+  <h2>Execution of design</h2>
+  <img height="300px" src="{% static 'images/chemise.jpg' %}" alt="costumes hanging in storage">
+  <h2>Depth of work</h2>
+</section>
 
 {% endblock %}
