--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -2,11 +2,27 @@
 
 {% block content %}
 
-<h1>About Southard Theatrical</h1>
+<section id="about">
+<h1>About Samantha Southard and Southard Theatrical</h1>
 <hr />
+</section>
 
-<header> Our Work </header>
+<p id="about-text"> Our studio is available to contract for outsourced builds for your theatre or performance group, including tailoring, millinery, dye and paint work, leatherwork, underpinnings, dressmaking, and period silhouettes. We also offer design consulting, styling, and outsource patterning services. Samantha is available for more traditional theatre design contracts.
+<br><br>
+We also maintain a modest stock of garments and accessories for purchase or rent. Please inquire if you are looking for a particular piece, as we may have something to suit. A digital photo inventory of rental-only stock is available via the menu "On the Rack" option. 
+<br><br>
+Additionally simple storefront is set up and can be accessed for purchases at Etsy.
+<br><br>
+Need something else? Reach out, we can build something new together!
+</p>
 
-
+<section id="about_images">
+  <img height="300px" src="../../static/images/20s.jpg" alt="woman in a 1920's style costume">
+  <img height="300px" src="../../static/images/full_dress.jpg" alt="costumes hanging in storage">
+  <img height="300px" src="../../static/images/chemise.jpg" alt="costumes hanging in storage">
+  <h2>Attention to detail</h2>
+  <h2>Depth of work</h2>
+  <h2>Execution of design</h2>
+</section>
 
 {% endblock %}
