--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -33,8 +33,8 @@ body {
   --link-hover-color: rgb(158, 37, 16);
   --button-bg: rgb(245, 245, 245);
   --button-bg-hover: rgb(226, 226, 226);
-  --submit: rgb(26, 128, 0);
-  --warn: rgb(255, 102, 0);
+  --submit: rgb(16, 79, 0);
+  --warn: rgb(255, 174, 0);
   --danger: rgb(220, 20, 30);
   --secondary: rgb(57, 57, 57);
   --card-box-shadow: 5px 5px 6px -1px #AAA;
@@ -68,6 +68,16 @@ body {
   position: absolute;
   z-index: -1;
   background-size: 100vh;
+}
+
+#about-text{
+  font-size: large;
+}
+
+#about {
+  padding-top: 40px;
+  margin-top: 40px;
+  justify-content: left;
 }
 
 header {
@@ -113,10 +123,11 @@ nav li {
   padding: 5px 8px;
 }
 
-#home_imgs{
+/* #about_images {
   display:grid;
-  grid-template-columns: repeat(3, 1vh);
-}
+  grid-template-rows: repeat(3, 100px);
+  grid-template-columns: repeat(2,300px);
+} */
 
 .header-logo-container {
   margin: auto;
@@ -129,6 +140,7 @@ nav li {
   display: flex;
   align-items: center;
   margin: 20px;
+  padding-top: 100px;
 }
 
 .btn {
@@ -235,6 +247,12 @@ nav li {
     margin-left: 25px;
   }
 
+  #about_images {
+    display:grid;
+    grid-template-columns: repeat(3,300px);
+    grid-template-rows: repeat(2, 300px)
+  }
+
   @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
     header {
       background: var(--nav-bg);
@@ -273,11 +291,18 @@ nav li {
   }
 
   #welcome_img{
+    position: relative;
     display: flex;
     align-items: center;
     align-content: center;
     justify-content: center;
     justify-items: center;
+  }
+
+  #about {
+    padding-top: 30px;
+    margin-top: 30px;
+    justify-content: left;
   }
 
   .header-logo-container {
