--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -46,38 +46,28 @@ body {
   --card-border-radius: 6px;
 }
 
-.background{
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;
-  text-align: center;
-  background-size: 100vh;
-}
-
-.background::after{
-  content: "";
-  background: url(../images/costume_patterns.jpeg);
-  opacity: .3;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;
-  background-size: 100vh;
-}
-
 #about-text{
   font-size: large;
+}
+
+#login-card{
+  background: rgba(250, 228, 190, 0.7);
+  border-radius: 6px;
+  height:fit-content
 }
 
 #about {
   padding-top: 40px;
   margin-top: 40px;
   justify-content: left;
+}
+
+#logo-subtext{
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  align-content: center;
+  align-items: center;
 }
 
 header {
@@ -122,12 +112,6 @@ nav ul {
 nav li {
   padding: 5px 8px;
 }
-
-/* #about_images {
-  display:grid;
-  grid-template-rows: repeat(3, 100px);
-  grid-template-columns: repeat(2,300px);
-} */
 
 .header-logo-container {
   margin: auto;
@@ -195,6 +179,29 @@ nav li {
   margin-left: 20px;
 }
 
+.background{
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -5;
+  background-size: 100vh;
+}
+
+.background::after{
+  content: "";
+  background: url(../images/costume_patterns.jpeg);
+  opacity: .3;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -5;
+  background-size: 100vh;
+}
+
 @media only screen and (min-width: 768px) {
   header {
     position: sticky;
@@ -215,7 +222,6 @@ nav li {
     padding: 0 15px;
   }
 
-  /* visual fix to help align logo */
   .header-logo-container {
     padding-top: 3px;
   }
@@ -306,7 +312,6 @@ nav li {
   }
 
   .header-logo-container {
-    /* visual fix to help align logo */
     padding-bottom: 10px;
     width: 256px;
     height: 35px;
