--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,7 +8,7 @@
   <link
     rel="shortcut icon"
     type="image/jpg"
-    href="{% static 'images/cropped_gown.jpg' %}" alt="A generic manaquin"
+    href="{% static 'images/cropped_gown.jpg' %}" alt="a period costume"
   >
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
   <title>Southard Theatrical</title>
