--- a/main_app/templates/garments/detail.html
+++ b/main_app/templates/garments/detail.html
@@ -25,13 +25,13 @@
   </div>
   <div class="garment-details">
     <h1>{{ garment.type }}</h1>
-    <h2>{{ garment.rate }}</h2>
-    <h4>Color: {{ garment.color }}</h4>
-    <h4>Period/Genre: {{ garment.genre }}</h4>
-    <h4>Materials: {{ garment.materials }}</h4>
-    <h4>Sizing info: {{ garment.sizing }}</h4>
-    <h4>Care Instructions: <br>{{ garment.care }}</h4>
-    <h4>Notes: <br>{{ garment.notes }}</h4>
+    <h2>Rental rate:<span class="details">{{ garment.rate }}</span></h2>
+    <h4>Color: <span class="details">{{ garment.color }}</span></h4>
+    <h4>Period/Genre: <span class="details">{{ garment.genre }}</span></h4>
+    <h4>Materials: <span class="details">{{ garment.materials }}</span></h4>
+    <h4>Sizing info: <span class="details">{{ garment.sizing }}</span></h4>
+    <h4>Care Instructions: <br><span class="details">{{ garment.care }}</span></h4>
+    <h4>Notes: <br><span class="details">{{ garment.notes }}</span></h4>
   </div>
   </section>
   <section>
