--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -62,6 +62,10 @@ body {
   justify-content: left;
 }
 
+.details{
+  font-weight: normal;
+}
+
 #logo-subtext{
   display: flex;
   justify-content: center;
