--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -117,9 +117,11 @@ nav li {
 
 .header-logo-container {
   margin: auto;
+  margin-left: 30%;
   padding: 10px 20px 0;
   max-width: 500px;
   font-family: Needlework Good;
+  word-wrap:break-word;
 }
 
 .page-header {
@@ -139,6 +141,11 @@ nav li {
   color: white;
   background-color: rgb(0, 81, 255);
   border-color: blue;
+}
+
+.avail_btn:hover {
+  color: var(--link-hover-color);
+  background-color: var(--button-bg-hover)
 }
 
 .btn {
@@ -272,16 +279,16 @@ nav li {
     min-height: calc(100vh - 55px);
   }
   
-  header {
+  /* header {
     margin: 20px 20px 0 20px;
     width: calc(100vw - 40px);
     max-width: 1920px;
     top: 20px;
     background-color: transparent;
     border-bottom: none;
-  }
+  } */
 
-  nav,
+  /* nav,
   .header-logo-container {
     margin: 0;
     background: var(--nav-bg-ff);
@@ -293,7 +300,7 @@ nav li {
 
   nav {
     margin-left: auto;
-  }
+  } */
 
   #welcome_img{
     position: relative;
@@ -310,11 +317,11 @@ nav li {
     justify-content: left;
   }
 
-  .header-logo-container {
+  /* .header-logo-container {
     padding-bottom: 10px;
     width: 256px;
     height: 35px;
-  }
+  } */
 
   @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
     header {
@@ -322,11 +329,11 @@ nav li {
       backdrop-filter: none;
     }
 
-    nav,
+    /* nav,
     .header-logo-container {
       background: rgba(250, 228, 190, 0.7);
       -webkit-backdrop-filter: blur(3px);
       backdrop-filter: blur(3px);
-    }
+    } */
   }
 }
