--- a/main_app/templates/garments/detail.html
+++ b/main_app/templates/garments/detail.html
@@ -25,15 +25,15 @@
     {% endif %}
   </div>
   <div class="garment-details">
-    <h1>{{ garment.type }}</h1>
-    <h2>Rental rate:<span class="details">{{ garment.rate }}</span></h2>
-    <h4>Color: <span class="details">{{ garment.color }}</span></h4>
-    <h4>Period/Genre: <span class="details">{{ garment.genre }}</span></h4>
-    <h4>Materials: <span class="details">{{ garment.materials }}</span></h4>
-    <h4>Sizing info: <span class="details">{{ garment.sizing }}</span></h4>
-    <h4>Care Instructions: <br><span class="details">{{ garment.care }}</span></h4>
-    <h4>Notes: <br><span class="details">{{ garment.notes }}</span></h4>
-    <h4 id="out_of_stock_display" hidden>Item is current out on a rental!</h4>
+    <h1 id="large">{{ garment.type }}</h1>
+    <h1>Rental rate:<span class="details">{{ garment.rate }}</span></h1>
+    <h1>Color: <span class="details">{{ garment.color }}</span></h1>
+    <h1>Period/Genre: <span class="details">{{ garment.genre }}</span></h1>
+    <h1>Materials: <span class="details">{{ garment.materials }}</span></h1>
+    <h1>Sizing info: <span class="details">{{ garment.sizing }}</span></h1>
+    <h1>Care Instructions: <br><span class="details">{{ garment.care }}</span></h1>
+    <h1>Notes: <br><span class="details">{{ garment.notes }}</span></h1>
+    <h1 id="out_of_stock_display" hidden>Item is current out on a rental!</h1>
   </div>
   </section>
   <section>
