--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -140,6 +140,7 @@ nav li {
   color: white;
   background-color: rgb(0, 81, 255);
   border-color: blue;
+  border-radius: 6px;
 }
 
 .avail_btn:hover {
