--- a/main_app/static/css/garment_detail.css
+++ b/main_app/static/css/garment_detail.css
@@ -39,6 +39,10 @@
   margin-bottom: 10px;
 }
 
+#large{
+  font-size: 25px;
+}
+
 /* @media only screen and (min-width: 768px) {
   .garment-container {
     padding: 35px 30px;
