--- a/main_app/static/css/garment_detail.css
+++ b/main_app/static/css/garment_detail.css
@@ -4,12 +4,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
 }
 
 .garment-img {
   width: 75%;
   max-width: 350px;
-  
 }
 
 .usr-img {
@@ -18,7 +18,9 @@
 }
 
 .garment-details {
-  width: 98%;
+  width: 40%;
+  border: 2px solid rgb(255, 187, 14);
+  background-color: rgb(255, 223, 184);
 }
 
 .color-block {
